Fix overflow in the list

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -5,3 +5,8 @@
 a[target="_blank"]:visited {
   color: gray;
 }
+
+.ant-row {
+  margin-right: 0 !important;
+  margin-left: 0 !important;
+}
